--- a/app/templates/ph_login.html
+++ b/app/templates/ph_login.html
@@ -33,7 +33,8 @@
                                 <span class="wt flex flex-centerize serif"></span>
                                 <div class="flex flex-evenly">
                                   <button id="validate_to_login" class="wt serif col-6 no-edges writing-padding no-border" type="submit"
-                                    style="background-color: #005457">Login</button>
+                                    style="background-color: #005457">Login
+                                  </button>
                                 </div>
                               </form>
                             <div class="wt col-8 serif flex flex-centerize" style="min-height: 70px;">
