--- a/app/static/CSS/dark_mode.css
+++ b/app/static/CSS/dark_mode.css
@@ -219,6 +219,14 @@
     overflow: hidden;
   }
 
+  .control-item:hover, .control-item:hover > *{
+    background-color: #1f1f1f;
+    text-shadow: 0px 0px 2px black;
+  }
+  .control-item>*{
+    padding: 1vh 0vw;
+  }
+
 
   #sign-in-form {
     display: none;
@@ -305,6 +313,16 @@
     z-index: 10;
   }
 
+  #edit_delete_container{
+    position:absolute;
+    top:100%;
+    background-color:rgba(0,0,0,0.9);
+    z-index:11;
+    width:22vw;
+    right: 0px;
+    box-shadow: 0px 0px 1px grey;
+  }
+
   .container_for_editing {
     width: 0px;
     height: 0px;
@@ -327,6 +345,10 @@
     .full-on-phone{width: 100%;}
     .options-device-adjust{
       width:100%;
+    }
+    #edit_delete_container{
+      width: 50vw;
+      right: 0px;
     }
   }
 
